# snark-challenge-prover-reference

./: .gitignore  CMakeLists.txt  build.sh  cuda_prover_piecewise.cu
depends/libff/libff/algebra/scalar_multiplication/: multiexp.tcc  multiplication.cu
depends/libfqfft/libfqfft/: CMakeLists.txt
depends/libfqfft/libfqfft/evaluation_domain/domains/: basic_radix2_domain.tcc  basic_radix2_domain_aux.tcc
depends/libfqfft/libfqfft/evaluation_domain/domains/cuda/: fft_kernel.cu  fft_kernel.h
libcuda/: CMakeLists.txt  device_field.h  device_field_operators.h  device_multiplication.cu  device_multiplication.h
libsnark/: CMakeLists.txt  device_field.h  device_field_operators.h  device_multiplication.cu  device_multiplication.h  device_multiplication_fixnum.cpp  main.cpp  prover_reference_functions.cpp  prover_reference_functions.cu
